# sustainable-product-search-chatgpt-plugin

./: .gitignore  Makefile  README.md  docker-compose.yml  green_products.json  index.py  pyproject.toml
plugin-server/: main.py  openapi.yaml
plugin-server/.well-known/: ai-plugin.json
